fixed login again

--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -1,3 +1,5 @@
 main.driver=CHROME
 webdriver.chrome.driver=C:\\Users\\chromedriver_win32\\chromedriver.exe
 webdriver.gecko.driver=C:\\Users\\geckodriver-v0.30.0-win64\\geckodriver.exe
+login=
+password=
